fixed responsivness issue with text wrap caused by addition of filter bar

--- a/src/Components/Landing/landingstyle.css
+++ b/src/Components/Landing/landingstyle.css
@@ -4,7 +4,6 @@
     padding: 1% 20%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-content: center; 
     text-align: center;
     background-color: #ec6553;
